fix bug - wrong width for iframe elements

--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -25,7 +25,7 @@ iframe {
 
 .modal-content iframe {
     margin-left: -15px;
-    margin-right: -15px;
+    width: calc(100% + 30px);
 }
 
 .modal-content .btn-close {
